css/style.css
:root {
	/* Change these values, as required */
	--clr-white: hsl(0 0% 100%);
	--clr-neutral-100: hsl(0 0% 95%);
	--clr-neutral-400: hsl(0 0% 60%);
	--clr-neutral-800: hsl(0 0% 17.5%);
	--clr-neutral-900: hsl(0 0% 7.5%);

	--clr-orange-100: hsl(31, 72%, 95%);
	--clr-orange-200: hsl(31, 72%, 82.5%);
	--clr-orange-400: hsl(31, 72%, 60%);
	--clr-orange-500: hsl(31, 72%, 50%);
	--clr-orange-600: hsl(31, 72%, 40%);
	--clr-orange-900: hsl(31, 72%, 7.5%);

	--clr-blue-100: hsl(219, 81%, 95%);
	--clr-blue-200: hsl(219, 81%, 82.5%);
	--clr-blue-400: hsl(219, 81%, 60%);
	--clr-blue-500: hsl(219, 81%, 50%);
	--clr-blue-600: hsl(219, 81%, 40%);
	--clr-blue-900: hsl(219, 81%, 7.5%);

	--clr-lime-200: hsl(144 75% 82.5%);
	--clr-lime-700: hsl(144 75% 30%);

	--clr-red-200: hsl(0 75% 82.5%);
	--clr-red-700: hsl(0 75% 30%);

	--ff-primary: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
	--fs-small: 0.872rem;
	--fs-mid: 1.25rem;
	--fs-large: 1.65rem;
	--fs-larger: 2rem;
	--fw-300: 300;
	--fw-400: 400;
	--fw-600: 600;
	--fw-700: 700;

	--size-2: 0.5rem;
	--size-3: 0.75rem;
	--size-4: 1rem;
	--size-6: 1.5rem;
	--size-8: 2rem;
	--size-12: 2.875rem;

	/* For Light Theme */
	--text-primary-light: var(--clr-neutral-900);
	/* --text-secondary-light: var(--clr-neutral-800); */
	--text-tertiary-light: var(--clr-neutral-400);
	--text-accent-light: var(--clr-orange-400);
	--bg-primary-light: var(--clr-orange-100);
	--bg-secondary-light: var(--clr-white);

	/* For Dark Theme */
	--text-primary-dark: var(--clr-neutral-100);
	/* --text-secondary-dark: var(--clr-neurtal-200); */
	--text-tertiary-dark: var(--clr-neutral-400);
	--text-accent-dark: var(--clr-blue-400);
	--bg-primary-dark: var(--clr-blue-900);
	--bg-secondary-dark: var(--clr-neutral-800);

	color-scheme: light dark;
	--background: light-dark(var(--bg-primary-light), var(--bg-primary-dark));
	--background-2: light-dark(var(--bg-secondary-light), var(--bg-secondary-dark));
	--box-shadow: light-dark(var(--clr-orange-900), var(--clr-blue-100));
	--button: light-dark(var(--clr-orange-500), var(--clr-blue-600));
	--button-hover: light-dark(var(--clr-orange-600), var(--clr-blue-500));
	--color: light-dark(var(--text-primary-light), var(--text-primary-dark));
	--color-2: light-dark(var(--text-accent-light), var(--text-accent-dark));
	--color-3: light-dark(var(--text-tertiary-light), var(--text-tertiary-dark));
	--headers: light-dark(var(--clr-orange-400), var(--clr-blue-400));

	--progress-start: light-dark(var(--clr-orange-200), var(--clr-blue-200));
	--progress-end: light-dark(var(--clr-orange-600), var(--clr-blue-600));

	--answer-btn: light-dark(var(--clr-orange-200), var(--clr-blue-200));
	--answer-btn-border: light-dark(var(--clr-orange-400), var(--clr-blue-400));
	--answer-btn-hover: light-dark(var(--clr-orange-600), var(--clr-blue-600));
	--answer-btn-bg-✔️: light-dark(var(--clr-lime-200), var(--clr-lime-200));
	--answer-btn-clr-✔️: light-dark(var(--clr-lime-700), var(--clr-lime-700));
	--answer-btn-bg-❌: light-dark(var(--clr-red-200), var(--clr-red-200));
	--answer-btn-clr-❌: light-dark(var(--clr-red-700), var(--clr-red-700));
}
[data-theme="light"] {
	color-scheme: light;
}
[data-theme="dark"] {
	color-scheme: dark;
}

/* RESET */
*,
*::before,
*::after {
	box-sizing: border-box;
}
* {
	margin: 0;
	padding: 0;
}
a {
	text-decoration: none;
}
img,
picture,
svg {
	display: block;
	max-width: 100%;
}

/* CUSTOM STYLES */
body {
	background-color: var(--background);
	color: var(--color);
	font-family: var(--ff-primary);
	font-size: var(--size-4);
	line-height: 1.4;

	display: flex;
	justify-content: center;
	align-items: center;
	min-height: 100vh;

	padding: var(--size-4);
}
h1,
h2 {
	font-weight: var(--fw-700);
	margin-bottom: 0.7rem;
}
h1 {
	font-size: var(--fs-larger);
}
h2 {
	font-size: var(--fs-large);
}
p {
	margin-bottom: var(--size-4);
}

/* UTILITY STYLES */
button {
	border: none;
	border-radius: var(--size-2);
	font-size: inherit;
	font-weight: var(--fw-300);
	padding: var(--size-2) var(--size-4);

	cursor: pointer;
}
.text-center {
	text-align: center;
}

/* LAYOUT STYLES */
.container {
	--box-shadow-transparency: color-mix(in srgb, var(--box-shadow) 10%, transparent);
	background: var(--background-2);
	border-radius: var(--size-4);
	box-shadow: 6px 6px 6px -2px var(--box-shadow-transparency);

	width: 100%;
	max-width: 600px;
	overflow: hidden;
	position: relative;
}

/* QUIZ STYLES */
.screen {
	display: none;
	padding: var(--size-8);
}
.screen.active {
	display: block;
}

#start-screen h1,
#result-screen h1 {
	color: var(--headers);
}
#start-screen p,
#result-screen > p {
	font-size: var(--fs-mid);
}

.quiz-info {
	color: var(--color-3);
	display: flex;
	justify-content: space-between;
}
.question-category {
	background-color: var(--button);
	border-radius: 0.5rem;
	color: var(--clr-white);
	display: inline-block;
	font-size: var(--fs-small);
	font-weight: var(--fw-600);
	padding: var(--size-2) var(--size-3);
	text-transform: uppercase;
}

.answers-container {
	display: flex;
	flex-direction: column;
	gap: var(--size-4);
	margin-block: var(--size-4);
}
.answer-btn {
	background-color: var(--answer-btn);
	border: 2px solid var(--answer-btn-border);
	border-radius: var(--size-3);
	color: var(--clr-neutral-900);
	padding: var(--size-4) var(--size-12);
	text-align: left;
	transition: all 0.3s ease;

	cursor: pointer;
	position: relative;

	&::before {
		content: "";
		position: absolute;
		left: 10px;
		top: 12px;
		background-color: var(--answer-btn);
		border: 2px solid var(--answer-btn-border);
		border-radius: 50%;
		width: 28px;
		aspect-ratio: 1 / 1;
	}

	&:hover,
	&:focus-visible {
		background-color: var(--answer-btn-hover);
		color: var(--clr-neutral-100);

		&::after {
			content: "";
			position: absolute;
			left: 14px;
			top: 16px;
			background-color: var(--answer-btn-border);
			border-radius: 50%;
			width: 20px;
			aspect-ratio: 1 / 1;
		}
	}
}
.answer-btn.correct {
	background-color: var(--answer-btn-bg-✔️);
	border: 2px solid var(--answer-btn-clr-✔️);
	color: var(--answer-btn-clr-✔️);
	font-weight: var(--fw-700);

	&::before {
		background-color: var(--answer-btn-bg-✔️);
		border: 2px solid var(--answer-btn-clr-✔️);
	}
	&::after {
		content: "✔️";
		position: absolute;
		left: 12px;
		background-color: transparent;
	}
}
.answer-btn.incorrect {
	background-color: var(--answer-btn-bg-❌);
	border: 2px solid var(--answer-btn-clr-❌);
	color: var(--answer-btn-clr-❌);
	font-weight: var(--fw-700);

	&::before {
		background-color: var(--answer-btn-bg-❌);
		border: 2px solid var(--answer-btn-clr-❌);
	}
	&::after {
		content: "❌";
		position: absolute;
		left: 12px;
		top: 15px;
		background-color: transparent;
	}
}

.progress-bar {
	background-color: var(--background);
	border-radius: var(--size-2);
	height: 16px;
	margin-block: var(--size-6);
	width: 100%;
	overflow: hidden;

	container-type: inline-size;
}
.progress {
	background-color: var(--button);
	background: linear-gradient(90deg, var(--progress-start), var(--progress-end));
	background-size: 100cqi;
	height: 100%;
	width: 100%;
	transition: width 0.3s ease;
}

.result-info {
	background-color: var(--background);
	border-radius: var(--size-2);
	padding: var(--size-4);
	margin-bottom: var(--size-4);
}
.result-info p {
	font-size: var(--fs-mid);
	font-weight: var(--fw-600);
	margin-bottom: var(--size-2);
}
.result-message {
	color: var(--headers);
	font-size: var(--fs-large);
	font-weight: var(--fw-700);
}

.quiz-btn {
	background-color: var(--button);
	color: var(--clr-white);
	display: block;
	margin: 0 auto;
	transition: background-color 0.3s ease;

	&:hover,
	&:focus-visible {
		background-color: var(--button-hover);
	}
	&:focus-visible {
		outline: 3px solid var(--button);
	}
}
.quiz-btn-outline {
	background-color: var(--background);
	color: var(--color);
	outline: 2px solid var(--button);

	&:hover,
	&:focus-visible {
		color: var(--clr-white);
	}
}

/* THEME TOGGLE STYLING */
.fixed-theme-toggle {
	position: fixed;
	right: var(--size-4);
	bottom: var(--size-4);
	cursor: pointer;
	z-index: 999;
}
#theme-toggle {
	background: var(--button);
	border: 0;
	cursor: pointer;
	opacity: 0.8;
	padding: var(--size-3);
	border-radius: 50%;
	position: relative;
	isolation: isolate;
	transition: opacity 0.3s ease;

	&:hover,
	&:focus-visible {
		outline: 0;
		opacity: 1;
		background: var(--button-hover);
	}

	& svg {
		fill: var(--color);
	}
}
#theme-toggle::after {
	content: attr(aria-label);
	position: absolute;
	right: 2.8em;
	bottom: var(--size-2);
	width: max-content;
	margin: 0 auto;
	padding: var(--size-2) var(--size-4);
	border-radius: 0.125em;
	opacity: 0;
	transform: scale(0);
	transform-origin: center;
	transition:
		transform 0ms linear 100ms,
		opacity 100ms linear;
}
#theme-toggle:hover::after,
#theme-toggle:focus-visible::after {
	opacity: 0.7;
	transform: scale(1);
	transition:
		transform 70ms linear,
		opacity 70ms linear;
}
#theme-toggle #toggle-circle {
	transition: transform 500ms ease-out;
}
body[data-theme="light"] #theme-toggle #toggle-circle {
	transform: translateX(-14%);
}
body[data-theme="dark"] #theme-toggle #toggle-circle {
	transform: translateX(0);
}
/* THEME TOGGLE STYLING ENDS */

